<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_animation2"
    tools:context=".HowToActivity">


    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_button"
        android:drawablePadding="16dp"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="#80000000"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="@+id/btnBack"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvSushiDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        android:text="@string/sushi"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/ivSushiTwo" />

    <TextView
        android:id="@+id/tvSashimiDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        android:text="@string/sashimi"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/ivSashimi" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvWasabiDescription"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        android:text="@string/wasabi"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/ivWasabi" />

    <ImageView
        android:id="@+id/ivSushiOne"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:srcCompat="@drawable/ic_sushi1" />

    <ImageView
        android:id="@+id/ivSushiThree"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/tvDescription"
        app:layout_constraintTop_toTopOf="@+id/ivSushiTwo"
        app:srcCompat="@drawable/ic_sushi2" />

    <ImageView
        android:id="@+id/ivSushiTwo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/ivSushiThree"
        app:layout_constraintStart_toEndOf="@+id/ivSushiOne"
        app:layout_constraintTop_toTopOf="@+id/ivSushiOne"
        app:srcCompat="@drawable/ic_sushi3" />

    <ImageView
        android:id="@+id/ivSashimi"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/tvSushiDescription"
        app:layout_constraintStart_toStartOf="@+id/tvSushiDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvSushiDescription"
        app:srcCompat="@drawable/ic_sashimi" />

    <ImageView
        android:id="@+id/ivWasabi"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/tvSushiDescription"
        app:layout_constraintStart_toStartOf="@+id/tvSushiDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvSashimiDescription"
        app:srcCompat="@drawable/ic_wasabi" />

</androidx.constraintlayout.widget.ConstraintLayout>