<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_animation"
    tools:context=".GameActivity">

    <FrameLayout
        android:id="@+id/gameBound"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:alpha="1"
        android:background="#80000000"
        android:outlineAmbientShadowColor="#C21010"
        android:outlineSpotShadowColor="#D30D0D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConsole">

        <ImageView
            android:id="@+id/ivBento"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_bento_box"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/ivSushi"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_sushi1" />

        <ImageView
            android:id="@+id/ivSashimi"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_sashimi" />

        <ImageView
            android:id="@+id/ivWasabi"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_wasabi" />

    </FrameLayout>

    <View
        android:id="@+id/verticalBarOne"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gameBound"
        app:layout_constraintTop_toTopOf="@+id/gameBound" />

    <View
        android:id="@+id/verticalBarOne2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameBound"
        app:layout_constraintTop_toTopOf="@+id/gameBound" />

    <View
        android:id="@+id/tvConsole"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserScoreCount"
        app:layout_constraintEnd_toStartOf="@+id/tvHighScore"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvUserScore"
        app:layout_constraintTop_toTopOf="@+id/tvUserScore"
        app:srcCompat="@drawable/ic_bentoblitz" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bento_blitz_font"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="@android:color/white"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivTitle" />

    <TextView
        android:id="@+id/tvUserScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        android:text="@string/score"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintStart_toStartOf="@+id/tvConsole"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserScoreCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="@+id/tvUserScore"
        app:layout_constraintStart_toStartOf="@+id/tvUserScore"
        app:layout_constraintTop_toBottomOf="@+id/tvUserScore" />

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="2"
        android:text="@string/high_score"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHighScoreCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="100"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="@font/bento_blitz_font"
        app:layout_constraintEnd_toEndOf="@+id/tvHighScore"
        app:layout_constraintStart_toStartOf="@+id/tvHighScore"
        app:layout_constraintTop_toBottomOf="@+id/tvHighScore" />

</androidx.constraintlayout.widget.ConstraintLayout>